fix: Study Destination and Testimonial  style fix

--- a/ACT.html
+++ b/ACT.html
@@ -153,7 +153,7 @@
             <img src="./about.assets/globe.svg" alt="firstphoto" />
         </div>
         <div class="container2">
-            <h2>ABOUT ACT</h2>
+            <h2>About ACT</h2>
             <p>The American College Testing (ACT) is a computer-based standardized entrance examination designed to
                 evaluate the preparedness of high school students for admission to colleges and universities in the
                 United States. It assesses students in key academic areas, including English, Math, Reading, Science,
