--- a/GMAT.html
+++ b/GMAT.html
@@ -152,7 +152,7 @@
       <img src="./about.assets/globe.svg" alt="firstphoto" />
     </div>
     <div class="container2">
-      <h2>ABOUT GMAT
+      <h2>About GMAT
       </h2>
       <p>The GMAT (Graduate Management Admission Test) is a computer adaptive exam tailored for prospective business
         school students. It evaluates crucial skills essential for success in business programs, including analytical
