--- a/GRE.html
+++ b/GRE.html
@@ -153,7 +153,7 @@
             <img src="./about.assets/globe.svg" alt="firstphoto" />
         </div>
         <div class="container2">
-            <h2>ABOUT GRE</h2>
+            <h2>About GRE</h2>
             <p>The Graduate Record Exam (GRE) is the go-to admission test for graduate and business schools in the
                 United States and other prominent study destinations worldwide. Educational Testing Service (ETS), a
                 non-profit organization, oversees the administration of the GRE. This comprehensive exam evaluates a
