--- a/PTE.html
+++ b/PTE.html
@@ -153,7 +153,7 @@
       <img src="./about.assets/globe.svg" alt="firstphoto" />
     </div>
     <div class="container2">
-      <h2>ABOUT PTE
+      <h2>About PTE
       </h2>
       <p>The Pearson Test of English (PTE) is a widely recognized English language proficiency exam designed for non-native speakers aspiring to study or immigrate to English-speaking nations. Administered by Pearson Education, PTE Academic is a computer-based test tailored for individuals seeking education abroad. Unlike other exams, PTE Academic allows candidates to take the test multiple times, providing a flexible approach to demonstrate their English language skills. With its global acceptance and computer-based format, PTE Academic stands as a preferred choice for those aiming to prove their English proficiency and pursue academic or immigration goals in English-speaking countries.
 
