--- a/TOEFL.html
+++ b/TOEFL.html
@@ -154,7 +154,7 @@
       <img src="./about.assets/globe.svg" alt="firstphoto" />
     </div>
     <div class="container2">
-      <h2>ABOUT TOEFL
+      <h2>About TOEFL
       </h2>
       <p>The TOEFL (Test of English as a Foreign Language) is a widely recognized English language proficiency test, accepted by over 11,000 educational institutions, professional associations, immigration authorities, scholarship providers, and organizations in 150 countries. It is the most globally accepted language assessment and is offered at 4,500 test centers across 165+ countries. Administered by the non-profit ETS (Educational Testing Service), the TOEFL iBT (Internet Based Test) evaluates the English language skills of non-native speakers, assessing their ability to comprehend and use English effectively in academic settings. Students can take the TOEFL multiple times, with a minimum 12-day gap between attempts.
 
