--- a/index.html
+++ b/index.html
@@ -211,36 +211,41 @@
         <div class="card-row">
           <div class="col-md-4">
             <div class="card1">
-              <a href="./USA.html">
-                <img src="assets/usa.svg" alt="USA"></a>
+              <a href="USA.html">
+                <img src="assets/usa.svg" alt="USA">
+              </a>
               <p class="places">USA</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="card1">
-              <img src="assets/uk.svg" alt="UK">
+              <a href="UK.html">
+                <img src="assets/uk.svg" alt="UK">
+              </a>
               <p class="places">UK</p>
             </div>
             <div class="card1">
-              <img src="assets/canada.svg" alt="Canada">
+              <a href="CANADA.html">
+                <img src="assets/canada.svg" alt="Canada">
+              </a>
               <p class="places">CANADA</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="card1">
-              <img src="assets/aus.svg" alt="Australia">
+              <a href="AUSTRALIA.html">
+                <img src="assets/aus.svg" alt="Australia">
+              </a>
               <p class="places">AUSTRALIA</p>
             </div>
             <div class="card1">
-              <img src="assets/world.svg" alt="Rest of the World">
+              <a href="USA.html">
+                <img src="assets/world.svg" alt="Rest of the World">
+              </a>
               <p class="places">REST of the WORLD</p>
             </div>
           </div>
         </div>
-        <img src="./assets/Greenbg.svg" Alt="Green Background" class="Green-Background" />
-        <img src="./assets/greenbg2.svg" Alt="Green Background2" class="Green-Background2" />
-        <img src="./assets/SDpattern.svg" Alt="SDP" class="SDP" />
-        <img src="./assets/SDpattern.svg" Alt="SDP" class="SDP2" />
       </div>
     </section>
 
@@ -262,7 +267,7 @@
           </a>
 
           <div class="col-md-4">
-            <a href="./IELTS.html" alt="TOEFL">
+            <a href="./TOEFL.html" alt="TOEFL">
               <div class="test-card">
                 <h3>TOEFL</h3>
                 <p>Test of English as a Foreign Language</p>
@@ -272,7 +277,7 @@
           </a>
 
           <div class="col-md-4">
-            <a href="./IELTS.html" alt="PTE">
+            <a href="./PTE.html" alt="PTE">
               <div class="test-card">
                 <h3>PTE</h3>
                 <p>Pearson Test of English</p>
@@ -284,7 +289,7 @@
         <div class="row">
 
           <div class="col-md-4">
-            <a href="./IELTS.html" alt="GRE">
+            <a href="./GRE.html" alt="GRE">
               <div class="test-card">
                 <h3>GRE</h3>
                 <p>Graduate Record Exam</p>
@@ -294,7 +299,7 @@
           </a>
 
           <div class="col-md-4">
-            <a href="./IELTS.html" alt="GMAT">
+            <a href="./GMAT.html" alt="GMAT">
               <div class="test-card">
                 <h3>GMAT</h3>
                 <p>Graduate Management Admission Test</p>
@@ -304,7 +309,7 @@
           </a>
 
           <div class="col-md-4">
-            <a href="./IELTS.html" alt="SAT">
+            <a href="./SAT.html" alt="SAT">
               <div class="test-card">
                 <h3>SAT</h3>
                 <p>Scholastic Assessment Test</p>
@@ -409,15 +414,13 @@
             <li>
               <div class="time-card">
                 <p class="time-cardcontent1"><span>#9</span> Visa Assistance</p>
-                <p class="time-cardcontent2">Get to know about all the procedures and options to fund your
-                  world class education.</p>
+                <p class="time-cardcontent2">Get help with all the formalities to aquire your Visa and other approvals.</p>
               </div>
             </li>
             <li>
               <div class="time-card">
                 <p class="time-cardcontent1"><span>#10</span> Forex Assistance</p>
-                <p class="time-cardcontent2">Every step is a challenge, and the most important of them all
-                  is cracking all interviews.</p>
+                <p class="time-cardcontent2">Forex assistance is a must required service especially when you are flying international.</p>
               </div>
             </li>
             <li>
