--- a/AUSTRALIA.html
+++ b/AUSTRALIA.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>USA</title>
-    <link rel="stylesheet" href="./USA.css" />
     <meta name="viewport" content="width= device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CANADA.css" />
+    <link rel="stylesheet" href="AUSTRALIA.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
